--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,16 @@
 *.tar.gz
 *.rar
 
+.settings/
+target/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# ignore (private) dev things
+build.[Dd]evelopment.cmd
+build.[Dd]evelopment.sh
+run.[Dd]evelopment.cmd
+run.[Dd]evelopment.sh
+docker.[Dd]evelopment.cmd
+docker.[Dd]evelopment.sh
