--- a/1-java-api-idtokenhint/presentation_request_config.json
+++ b/1-java-api-idtokenhint/presentation_request_config.json
@@ -2,7 +2,8 @@
   "authority": "...set at runtime...",
   "includeQRCode": false,
   "registration": {
-    "clientName": "Verifiable Credential Expert Sample"
+    "clientName": "Verifiable Credential Expert Sample",
+    "purpose": "the purpose why the verifier asks for one or more VCs",
   },
   "callback": {
     "url": "...set at runtime...",
@@ -18,7 +19,7 @@
         "type": "VerifiedCredentialExpert",
         "manifest": "...set at runtime...",
         "purpose": "the purpose why the verifier asks for a VC",
-        "trustedIssuers": [ "...set at runtime..." ]
+        "acceptedIssuers": [ "...set at runtime..." ]
       }
     ]
   }
