--- a/1-java-api-idtokenhint/presentation_request_config.json
+++ b/1-java-api-idtokenhint/presentation_request_config.json
@@ -1,5 +1,5 @@
 {
-  "authority": "...set at runtime...",
+  "authority": "did:ion: THIS IS YOUR DID FROM THE VC PAGE IN AZURE PORTAL ...set at runtime...",
   "includeQRCode": false,
   "registration": {
     "clientName": "Verifiable Credential Expert Sample",
@@ -9,7 +9,7 @@
     "url": "...set at runtime...",
     "state": "...set at runtime...",
     "headers": {
-      "my-api-key": "blabla"
+      "my-api-key": "OPTIONAL API-KEY for VERIFIER CALLBACK API"
     }
   },
   "presentation": {
@@ -17,7 +17,6 @@
     "requestedCredentials": [
       {
         "type": "VerifiedCredentialExpert",
-        "manifest": "...set at runtime...",
         "purpose": "the purpose why the verifier asks for a VC",
         "acceptedIssuers": [ "...set at runtime..." ]
       }
