Mac/Linux powershell, client cert + az cli support

--- a/1-java-api-idtokenhint/src/main/resources/application.properties
+++ b/1-java-api-idtokenhint/src/main/resources/application.properties
@@ -7,7 +7,11 @@ aadvc_scope=bbb94529-53a3-4be5-a069-7eaf2712b826/.default
 aadvc_TenantId=${AADVC_TenantId}
 aadvc_ClientId=${AADVC_ClientID}
 aadvc_ClientSecret=${AADVC_ClientSecret}
-aadvc_ApiKey=MyApiKey
+aadvc_CertName=${AADVC_CertName}
+aadvc_CertLocation=${AADVC_CertLocation}
+aadvc_CertKeyLocation=${AADVC_CertKeyLocation}
+
+aadvc_ApiKey=${AADVC_ApiKey}
 aadvc_CacheExpiresInSeconds=300
 aadvc_PresentationFile=${AADVC_PRESENTATIONFILE}
 aadvc_IssuanceFile=${AADVC_ISSUANCEFILE}
