--- a/1-java-api-idtokenhint/Dockerfile
+++ b/1-java-api-idtokenhint/Dockerfile
@@ -3,6 +3,7 @@ COPY src /home/app/src
 COPY pom.xml /home/app
 # copy all JSON files with issue/present payload definitions
 COPY ./*.json /home/app
+COPY ./AppCreationScripts/aadappcert* /home/app
 RUN mvn -f /home/app/pom.xml clean package -DskipTests
 #
 # Package stage
@@ -10,5 +11,6 @@ RUN mvn -f /home/app/pom.xml clean package -DskipTests
 FROM openjdk:11-jre-slim
 COPY --from=build /home/app/target/java-aadvc-api-idtokenhint-0.0.1-SNAPSHOT.jar /usr/local/lib/app.jar
 COPY --from=build /home/app/*.json /usr/local/lib
+COPY --from=build /home/app/aadappcert* /usr/local/lib
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/usr/local/lib/app.jar"]
