adjust endpoint for tenant region

--- a/1-java-api-idtokenhint/src/main/resources/application.properties
+++ b/1-java-api-idtokenhint/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static
 
-aadvc_ApiEndpoint=https://beta.did.msidentity.com/v1.0/{0}/verifiablecredentials/request
+aadvc_ApiEndpoint=${AADVC_ApiEndpoint}
 aadvc_Authority=https://login.microsoftonline.com/{0}
 aadvc_scope=bbb94529-53a3-4be5-a069-7eaf2712b826/.default
 aadvc_TenantId=${AADVC_TenantId}
@@ -13,6 +13,7 @@ aadvc_CertKeyLocation=${AADVC_CertKeyLocation}
 
 aadvc_ApiKey=${AADVC_ApiKey}
 aadvc_CacheExpiresInSeconds=300
+aadvc_CredentialManifest=${AADVC_CREDENTIALMANIFEST}
 aadvc_PresentationFile=${AADVC_PRESENTATIONFILE}
 aadvc_IssuanceFile=${AADVC_ISSUANCEFILE}
 aadvc_IssuerAuthority=${AADVC_ISSUERAUTHORITY}
