--- a/1-java-api-idtokenhint/issuance_request_config.json
+++ b/1-java-api-idtokenhint/issuance_request_config.json
@@ -1,26 +1,24 @@
 {
-  "authority": "did:ion: THIS IS YOUR DID FROM THE VC PAGE IN AZURE PORTAL ...set at runtime...",
   "includeQRCode": false,
-  "registration": {
-    "clientName": "Verifiable Credential Expert Sample"
-  },
   "callback": {
-    "url": "...set at runtime...",
-    "state": "...set at runtime...",
+    "url": "https://YOURPUBLICREACHABLEHOSTNAME/api/issuer/issuanceCallback",
+    "state": "STATEWILLBESETINCODE",
     "headers": {
       "api-key": "OPTIONAL API-KEY for ISSUANCE CALLBACK API"
     }
   },
-  "issuance": {
-    "type": "VerifiedCredentialExpert",
-    "manifest": "CREDENTIAL URL ...set at runtime...",
-    "pin": {
-      "value": "123456",
-      "length": 4
-    },
-    "claims": {
-      "given_name": "FIRSTNAME",
-      "family_name": "LASTNAME"
-    }
+  "authority": "did:ion: THIS IS YOUR DID FROM THE VC PAGE IN AZURE PORTAL WHICH IS SET IN THE run.cmd/sh OR docker-run.cmd/sh files",
+  "registration": {
+    "clientName": "Verifiable Credential Expert Sample"
+  },
+  "type": "VerifiedCredentialExpert",
+  "manifest": "CREDENTIAL MANIFEST URL IN THIS SAMPLE WILL SET IN THE run.cmd/sh OR docker-run.cmd/sh files",
+  "pin": {
+    "value": "123456",
+    "length": 4
+  },
+  "claims": {
+    "given_name": "FIRSTNAME",
+    "family_name": "LASTNAME"
   }
 }
