--- a/1-java-api-idtokenhint/pom.xml
+++ b/1-java-api-idtokenhint/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -53,7 +52,8 @@
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>msal4j</artifactId>
-			<version>1.10.1</version>
+			<!--<version>1.10.1</version>-->
+			<version>1.14.4-beta</version>
         </dependency>
 	</dependencies>
 
@@ -63,6 +63,34 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+		    <plugin>
+		        <groupId>com.microsoft.azure</groupId>
+		        <artifactId>azure-webapp-maven-plugin</artifactId>
+		        <version>2.13.0</version>
+		        <configuration>
+		            <schemaVersion>v2</schemaVersion>
+		            <resourceGroup>cljung-javaapp5-rg</resourceGroup>
+		            <appName>cljungjavaapp5</appName>
+					<appServicePlanName>cljungjavaapp5-plan</appServicePlanName>
+		            <pricingTier>B1</pricingTier>
+		            <region>swedencentral</region>
+		            <runtime>
+		                <os>Linux</os>
+		                <javaVersion>Java 17</javaVersion>
+		                <webContainer>Java SE</webContainer>
+		            </runtime>
+		            <deployment>
+		                <resources>
+		                    <resource>
+		                        <directory>${project.basedir}/target</directory>
+		                        <includes>
+		                            <include>*.jar</include>
+		                        </includes>
+		                    </resource>
+		                </resources>
+		            </deployment>
+		        </configuration>
+		    </plugin>
 		</plugins>
 	</build>
 
